# ORBIT

./: .gitignore  Event_VAE_FSQ_test.ipynb  Event_VAE_FSQ_test.py  README.md  pq_files_train_val.txt  pyproject.toml
conf/: config.yaml  sweep.yaml
conf/hyperparams/: default_hyperparams.yaml
conf/model/: default_model.yaml
conf/replot/: default_replot.yaml
conf/trainer/: default_trainer.yaml
saved_histograms/: val_hists_step_2.npz  val_hists_step_4.npz
src/: data_loading.py  eval_metrics.py  lightning_defs.py  main.py  model_defs.py  plotting.py  torch_modules.py  train_eval.py
sweeps/: sweep.yaml
