[project]
name = "orbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastjet>=3.5.1.2",
    "hist[plot]>=2.10.1",
    "hydra-core>=1.3.2",
    "keras>=3.13.2",
    "lightning>=2.6.1",
    "line-profiler>=5.0.2",
    "matplotlib>=3.10.8",
    "mplhep>=1.1.2",
    "pyarrow>=23.0.1",
    "pylorentz>=0.3.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "wandb>=0.25.1",
]
